brevets/static/css/calc.css
/*
 * Styles for ACP control calculator
 *
 * These should not conflict with bootstrap's CSS, but they may 
 * add more specific styles. 
 */
/* 
.notesDiv { 
    height: 50px; 
    overflow: visible; 
} */

.notes { 
    height: 40px; 
    min-width: 300px; 
    color: red; 
} 

.message {
    color: red; 
}

#errorArea {
    color:red; 
    font-size: 15;
}

